media-server/whisparr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisparr
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: whisparr
